# avataa-comments

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: init_app.py  main.py  security.py
app/database/: database.py
app/database/models/: comments.py  default_comments.py
app/migrations/: env.py
app/migrations/versions/: 2024_11_06_1442-3bccc392df5a_initial_migration.py
app/routers/comments/: comments.py  default_comments.py
app/settings/: settings.py
